# MLZ-midterm

./: Dockerfile  README.md  loan_approval.ipynb  marketing.py  predict.py  pyproject.toml  test.py  train.py
