[project]
name = "mlz-midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awsebcli>=3.25.3",
    "fastapi>=0.121.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "awsebcli>=3.25.3",
    "requests>=2.32.5",
]
